# supreme-ml

./: README.md  final_checkpoint_from_cp2.ipynb  pyproject.toml
data/: filtered_cases.json
notebooks/: 20230421_SupremeML_CP1_v1.ipynb  checkpoint2.ipynb  final_checkpoint_validation_and_TEST.ipynb  load_data.ipynb  megan_checkpoint3.ipynb  megan_preprocessing_checkpoint2.ipynb  megans_analysis.ipynb
